--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-/* src/App.css */
 .App {
   text-align: center;
-  height: 100vh; /* Faz a altura ocupar 100% da tela */
+  height: 100vh; 
   display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
-  align-items: center; /* Centraliza verticalmente */
-  background-color: #f4f4f4;  /* Cor de fundo */
+  justify-content: center; 
+  align-items: center; 
+  background-color: #f4f4f4;  
 }
 
 .login-container {
@@ -13,7 +12,7 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: white;  /* Cor de fundo do formulário */
+  background-color: white;
 }
 
 form {
